# certora-vault-tutorial-beta

./: .gitignore  Cargo.toml  LICENSE.md  README.md  rust-toolchain.toml
programs/vault/: Cargo.toml  justfile
programs/vault/src/: errors.rs  instruction.rs  lib.rs  loaders.rs  operations.rs  processor.rs  state.rs
programs/vault/src/certora/: LICENSE  README.md  certora-setup.py  constants.rs  log.rs  mod.rs  nondet.rs
programs/vault/src/certora/confs/: access_control.conf  base.conf  fees.conf  integrity.conf  integrity_fail.conf  no_dilution.conf  no_dilution_processor.conf  run.conf  solvency.conf  solvency_processor.conf  vault_consistency.conf
programs/vault/src/certora/envs/: cvlr_inlining.txt  cvlr_inlining_anchor.txt  cvlr_inlining_core.txt  cvlr_inlining_package.txt  cvlr_summaries.txt  cvlr_summaries_anchor.txt  cvlr_summaries_core.txt  cvlr_summaries_package.txt  envs.just  justfile
programs/vault/src/certora/just/: build.just  certoraDevVerify.just
programs/vault/src/certora/mocks/: mod.rs  processor.rs
programs/vault/src/certora/scripts/: certora_build.py
programs/vault/src/certora/specs/: access_control.rs  base.rs  base_processor.rs  fees.rs  mod.rs  no_dilution.rs  no_dilution_processor.rs  props.rs  props_processor.rs  solvency.rs  solvency_processor.rs  utils_math.rs  vault_consistency.rs
programs/vault/src/certora/specs/access_control/: access_control.rs  mod.rs  props.rs
programs/vault/src/certora/specs/fees/: fees.rs  mod.rs  props.rs
programs/vault/src/certora/specs/inflation_attack/: inflation_attack.rs  mod.rs
programs/vault/src/certora/specs/integrity/: integrity.rs
programs/vault/src/certora/specs/no_dilution/: mod.rs  no_dilution.rs  no_dilution_processor.rs  props.rs  props_processor.rs
programs/vault/src/certora/specs/solvency/: mod.rs  props.rs  props_processor.rs  solvency.rs  solvency_processor.rs
programs/vault/src/loaders/: mod.rs  utils.rs  vault_loaders.rs  vault_with_fee_loaders.rs
programs/vault/src/operations/: mod.rs  vault_exact_deposit_operations.rs  vault_fee_operations.rs  vault_operations.rs
programs/vault/src/processor/: collect_fee.rs  deposit.rs  deposit_exact.rs  deposit_with_fee.rs  deposit_with_fee_exact.rs  mod.rs  redeem_shares.rs  slash.rs  spl_token_utils.rs  update_reward.rs
programs/vault/src/utils/: guards.rs  math.rs  mod.rs
(+7 files in other folders)
