[workspace]
members = ["programs/vault"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = 'thin'

[workspace.dependencies]
solana-program = "1.18"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.3", features = [ "no-entrypoint", ] }
bytemuck = { version = "1.4.0", features = ["derive"] }


# CVLR
cvlr = "0.4.0"
cvlr-solana = "0.4.4"

